[Qt] Middle clicking a scrollbar causes text to be pasted. https://bugs.webkit.org/show_bug.cgi?id=78444

Source/WebKit/qt:

Check if the event was already accepted before handling the clipboard.

Patch by Steffen Imhof <steffen.imhof@basyskom.com> on 2012-07-11
Reviewed by Simon Hausmann.

* Api/qwebpage.cpp:
(QWebPagePrivate::mouseReleaseEvent):

LayoutTests:

Updated the scrollbars/scrollbar-middleclick-nopaste.html test to use an
<input> field as target for onpaste events. Using <body> did not work
(at least for Qt), because the onpaste events are not fired, even if
manually middle-clicking into the body. My guess would be that they are
not sent, because the body is non-editable. The changed test should
reflect the common use-case triggering the problem better.

Patch by Steffen Imhof <steffen.imhof@basyskom.com> on 2012-07-11
Reviewed by Simon Hausmann.

* scrollbars/scrollbar-middleclick-nopaste.html:

Canonical link: https://commits.webkit.org/108809@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@122333 268f45cc-cd09-0410-ab3c-d52691b4dbfc